# Usagi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl  TriangleVertexColor.glsl  first3D.glsl  hdr.glsl  quad.glsl  simplePBR.glsl
Sandbox/assets/shaders/LearnOpenGLShaders/: PhongShader.glsl  Skybox.glsl  lightShader.glsl
Sandbox/src/: Application.cpp  SandboxApp.cpp
Sandbox/src/Layers/: ExampleLayer.h  LearnOpenGLLayer.h  simplePBRLayer.h
Usagi/: CMakeLists.txt
Usagi/src/: Test.cpp  Test.h  Usagi.h  usgpch.cpp  usgpch.h
Usagi/src/Usagi/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Keycodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Usagi/src/Usagi/Core/: Timestep.h
Usagi/src/Usagi/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Usagi/src/Usagi/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Usagi/src/Usagi/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicContext.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Usagi/src/platform/: WindowsWindow.cpp  WindowsWindow.h
Usagi/src/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Usagi/src/platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
